# wsu-hackathon-2025

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  art.csv  cetria_test.c  cetria_test.h  colors.c  colors.h  draw.c  draw.h  fgets-resize.c  fgets-resize.h  get-user-input.c  get-user-input.h  hack_colors.c  hack_colors.h  hack_menus.c  hack_menus.h  main.c  menu.c  menu.h  position-test.c  position-test.h  position.c  position.h  save_and_load.c  save_and_load.h  structs.h
